# lingxi

./: .env.example  .gitignore  API_DOCUMENTATION.md  EXAMPLE_USAGE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATES.md  MULTI_AGENT.md  PERSONALITY_UPDATE.md  PROJECT_SUMMARY.md  README.md  example_api_usage.js  example_api_usage.py  pyproject.toml  requirements.txt  setup.py
app/: celerybeat-schedule.db  db.sqlite3  dump.rdb
app/agent/: admin.py  api_tests.py  api_urls.py  api_views.py  apps.py  core.py  models.py  prompt.py  scheduler.py  serializers.py  tasks.py  test_multi_agent.py  tests.py  views.py
app/agent/migrations/: 0001_initial.py  0002_chatsession_message_count_chatsession_summary.py  0003_chatsession_last_activity_at.py  0004_alter_chatsession_last_activity_at.py  0005_chatinformation_is_read.py  0006_agent_chatinformation_agent_chatsession_agents.py  0006_agentconfiguration_user_chatsession_user_and_more.py  0007_create_default_agents.py
app/app/: celery.py  settings.py  urls.py
app/static/: chat.js  styles.css
app/templates/: chat_ui.html
docs/: API.md  ARCHITECTURE.md  QUICKSTART.md
examples/: demo.py  simple_demo.py  transparent_demo.py
src/proactive_ai/: __init__.py  chatbot.py
src/proactive_ai/agents/: __init__.py  conversation_agent.py  memory_agent.py  proactive_agent.py
src/proactive_ai/utils/: __init__.py
tests/: test_basic.py
