[project]
dependencies = [
  "django>=5.2.7",
  "markdown-it-py>=4.0.0",
  "openai>=2.6.1",
  "python-dotenv>=1.0.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "djangorestframework>=3.15.0",
  "djangorestframework-simplejwt>=5.3.0",
]
description = "Add your description here"
name = "lingxi"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
